--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 <html>
-        <head class=".container-fluid">
+        <head>
             <title>
              PetLove 
             </title>
@@ -11,7 +11,7 @@
             <link rel="stylesheet"  href="index.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>   
-                <body class=".container-fluid">
+                <body class="container-fluid">
                         <header class="grid-header">
                                  
                                 <nav class="navegacion">
