--- a/oldprince.html
+++ b/oldprince.html
@@ -10,6 +10,9 @@
             integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
             <link rel="stylesheet"  href="css/index.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="keywords" content="Petshop, perros, gatos, alimento, antipulgas">
+            <title>PetLove</title>
+            <meta name="description" content="Todo lo que tu mascota necesita, alimentos balanceados, juguetes y mucho mas. Envio gratis a todo CABA">
         </head>
                 <body class="container-fluid">
                         <header class="grid-header">
