--- a/whiskas.html
+++ b/whiskas.html
@@ -4,8 +4,8 @@
             <title>
              PetLove 
             </title>
-            <link rel="shortcut icon" href="Imagenes/favicon.ico" type="image/x-icon">
-            <link rel="icon" href="Imagenes/favicon.ico" type="image/x-icon">
+            <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
+            <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
             integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
             <link rel="stylesheet"  href="css/index.css">
@@ -18,7 +18,7 @@
                         <header class="grid-header">
                                  
                                 <nav class="navegacion">
-                                        <a href="index.html"><img src="imagenes/LG.png"></a>
+                                        <a href="index.html"><img src="imagenes/lg.png"></a>
                                         <ul class="menu">
                                                 <li><a href="">ALIMENTO</a>
                                                 <ul class="submenu">
@@ -50,7 +50,7 @@
                         <main class="main">
                                 <h3 class="p">Alimentos de gatos 4kg</h3>
                                 <div>
-                                <img src="Imagenes/Whiskas.jpg" widht="500" height="500"> 
+                                <img src="Imagenes/whiskas.jpg" widht="500" height="500"> 
                                 <p class="p">$1000</p>
                                 <ul class="listdos">   
                                 <li>Peso: 4kg</li><br>
