--- a/whiskas.html
+++ b/whiskas.html
@@ -50,7 +50,7 @@
                         <main class="main">
                                 <h3 class="p">Alimentos de gatos 4kg</h3>
                                 <div>
-                                <img src="Imagenes/whiskas.jpg" widht="500" height="500"> 
+                                <img src="imagenes/whiskas.jpg" widht="500" height="500"> 
                                 <p class="p">$1000</p>
                                 <ul class="listdos">   
                                 <li>Peso: 4kg</li><br>
