--- a/whiskas.html
+++ b/whiskas.html
@@ -43,7 +43,7 @@
                                 </nav> <br>
 
                                 <div class="h2">Envios GRATIS a CABA y alrededores por compra mayores a $4000       
-                                        <img src="Imagenes/delivery-truck.png" width="70" height="70"> </div>
+                                        <img src="imagenes/delivery-truck.png" width="70" height="70"> </div>
                         
                         </header>
 
