--- a/whiskas.html
+++ b/whiskas.html
@@ -20,24 +20,29 @@
                                 <nav class="navegacion">
                                         <a href="index.html"><img src="imagenes/lg.png"></a>
                                         <ul class="menu">
-                                                <li><a href="">ALIMENTO</a>
-                                                <ul class="submenu">
-                                                        <li><a>PERROS</a></li>
-                                                        <li><a>GATOS</a></li>
-                                                </ul>
+                                                <li><a href="">Whiskas</a>
+                                                        <ul class="submenu">
+                                                                <li><a href="whiskas.html">Alimento gato</a></li>
+                                                                <li><a>Alimento perros</a></li>
+                                                        </ul>
                                                 </li> 
-                                                <li><a href="">JUGUETES</a></li>
-                                                <li><a href="">ANTIPULGAS</a>
-                                                <ul class="submenu">
-                                                        <li><a>PERROS</a></li>
-                                                        <li><a>GATOS</a></li>
-                                                </ul>
+                                                <li><a href="">Royal Canin</a>
+                                                        <ul class="submenu">
+                                                                <li><a href="royal.html">Alimento gato</a></li>
+                                                                <li><a>Alimento perros</a></li>
+                                                        </ul>
                                                 </li>
-                                                <li><a href="">HIGIENE</a>
-                                                <ul class="submenu">
-                                                        <li><a>PERROS</a></li>
-                                                        <li><a>GATOS</a></li>
-                                                </ul>
+                                                <li><a href="">Old Prince</a>
+                                                        <ul class="submenu">
+                                                                <li><a>Alimento gato</a></li>
+                                                                <li><a href="oldprince.html">Alimento perros</a></li>
+                                                        </ul>
+                                                </li>
+                                                <li><a href="">Pedigree</a>
+                                                        <ul class="submenu">
+                                                                <li><a>Alimento gato</a></li>
+                                                                <li><a href="pedigree.html">Alimento perros</a></li>
+                                                        </ul>
                                                 </li>
                                         </ul>
                                 </nav> <br>
