--- a/royal.html
+++ b/royal.html
@@ -45,6 +45,7 @@
                                                                 <li><a href="pedigree.html">Alimento perros</a></li>
                                                         </ul>
                                                 </li>
+                                                <li><a href="nosotros.html">Nosotros</a></li>
                                         </ul>
                                 </nav> <br>
 
