--- a/whiskas.html
+++ b/whiskas.html
@@ -44,6 +44,7 @@
                                                                 <li><a href="pedigree.html">Alimento perros</a></li>
                                                         </ul>
                                                 </li>
+                                                <li><a href="nosotros.html">Nosotros</a></li>
                                         </ul>
                                 </nav> <br>
                         </header>
