--- a/nosotros.html
+++ b/nosotros.html
@@ -57,20 +57,16 @@
                                 <h2 class="h5">Contaremos con una gran variedad de productos para todo tipo de mascotas.</h2> <br>
                             </div>
 
-                            <div>
-                                <form class="form">
+                                <form>
                                     <h3>Contactanos!</h3>
                                     <input type="text" name="Nombre" placeholder="Nombre">
                                     <input type="text" name="Apellido" placeholder="Apellido">
                                     <input type="email" name="E-mail" placeholder="E-mail">
-                                    <input type="text" name="Numero" placeholder="Numero">
+                                    <input type="text" name="Numero" placeholder="Número">
                                     <textarea type="mensaje" placeholder="Escriba su consulta aqui"></textarea>
                                     <input type="button" value="ENVIAR" id="boton">
                                 </form>
-                            </div>
-
-
-
+                            
                             </main>
                     
                             <footer class="grid-footer">
