--- a/oldprince.html
+++ b/oldprince.html
@@ -54,9 +54,10 @@
                         <main class="main">
                                 <h3 class="p">Alimento de cachorros Old Prince 15kg</h3>
                                 <div>
-                                <img src="imagenes/oldprince.png" widht="500" height="500"> 
-                                <p class="p">$4000</p>
-                                <ul class=listdos>   
+                                <img src="imagenes/oldprince.png" widht="450" height="450"> 
+                                <input class="inp" type="button" value="COMPRAR" id="boton">
+                                <ul class=listdos> 
+                                <li>$4000</li><br>  
                                 <li>Peso: 15kg</li><br>
                                 <li>Sabor: Cordero y arroz integral</li><br>
                                 <li>Marca: Old Prince</li><br>
