--- a/pedigree.html
+++ b/pedigree.html
@@ -56,9 +56,10 @@
                         <main class="main">
                                 <h3 class="p">Alimento de perros Pedigree 7,5kg</h3>                            
                                 <div>
-                                <img src="imagenes/pedigree.png" widht="500" height="500"> 
-                                <p class="p">$1900</p>
-                                <ul class="listdos">   
+                                <img src="imagenes/pedigree.png" widht="450" height="450"> 
+                                <input class="inp" type="button" value="COMPRAR" id="boton">
+                                <ul class="listdos"> 
+                                <li>$1900</li> <br> 
                                 <li>Peso: 7,5kg</li><br>
                                 <li>Sabor: Carne, pollo y cereales</li><br>
                                 <li>Marca: Pedigree</li><br>
