--- a/royal.html
+++ b/royal.html
@@ -57,9 +57,10 @@
                         <main class="main">
                                 <h3 class="p">Alimento de gatos Royal Canin 4kg</h3>
                                 <div>
-                                <img src="imagenes/royal.png" widht="500" height="500"> 
-                                <p class="p">$1350</p>
-                                <ul class="listdos">   
+                                <img src="imagenes/royal.png" widht="450" height="450"> <br>
+                                <input class="inp" type="button" value="COMPRAR" id="boton"> <br>
+                                <ul class="listdos">  
+                                <li>$1350</li> <br>
                                 <li>Peso: 4kg</li><br>
                                 <li>Sabor: Pollo</li><br>
                                 <li>Marca: Royal Canin</li><br>
