--- a/whiskas.html
+++ b/whiskas.html
@@ -52,9 +52,10 @@
                         <main class="main">
                                 <h3 class="p">Alimentos de gatos 4kg</h3>
                                 <div>
-                                <img src="imagenes/whiskas.png" widht="500" height="500"> 
-                                <p class="p">$1000</p>
-                                <ul class="listdos">   
+                                <img src="imagenes/whiskas.png" widht="450" height="450"> <br>
+                                <input class="inp" type="button" value="COMPRAR" id="boton">
+                                <ul class="listdos">  
+                                <li>$1200</li><br> 
                                 <li>Peso: 4kg</li><br>
                                 <li>Sabor: Carne y leche</li><br>
                                 <li>Marca: Whiskas</li><br>
